--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/hedonist666/cs#readme",
   "dependencies": {
     "axios": "^0.19.2",
+    "bluebird": "^3.7.2",
     "cheerio": "^1.0.0-rc.3"
   }
 }
