--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 node_modules
-<<<<<<< HEAD
 package-lock.json 
 scr.sh
 materials
@@ -8,6 +7,5 @@ res.js
 out
 *.html
 .http-mitm-proxy/
-=======
 out
->>>>>>> GUI
+wsLog.json
